--- a/src/sass/_process.scss
+++ b/src/sass/_process.scss
@@ -83,7 +83,7 @@
 }    
 
 
-@media screen and (max-width: 470px) {
+@media screen and (min-width: 470px) {
     .process {
         width: auto;
         background-color:#30332e;
@@ -132,10 +132,10 @@
     .greyBox {
         height: 260px;
         background-color: #7A8693;
-        grid-column-start: 5;
-        grid-column-end: 6;
         grid-row-start: 2;
+        width: 200px;
         margin-top: 70px;
+        margin-left: -60px;
         z-index: 1;
     }
     
@@ -146,7 +146,7 @@
         grid-column-start:5;
         grid-column-start:6;
         grid-row-start: 2;
-        margin-left: -290px;
+        margin-left: -190px;
         z-index: 5;
     }
     
@@ -154,10 +154,104 @@
         height: 150px;
         width: 300px;
         margin-top: 170px;
-        margin-left: -380px;
+        margin-left: -180px;
         grid-column-start: 5;
         grid-column-start: 6;
         grid-row-start: 2;
         z-index: 10;
-    }    
+    } 
+    
+    .processHeading {
+        font-family: 'Lexend Zetta', sans-serif;
+        padding-bottom: 10px;
+        font-size: 24px;
+        color: #edeec9;
+        border-bottom: 1px solid white;
+    }
 }
+
+@media screen and (min-width: 320px) {
+    .process {
+        width: auto;
+        background-color:#30332e;
+        display: grid;
+        grid-template-columns: 1fr 1fr repeat(6, 1fr) 1fr;
+        height: 980px;
+    }
+    
+    .processDiv {
+        width: 320px;
+        text-align: center;
+        padding: 10px;
+        grid-column-start: 5;
+        justify-content: center;
+    }
+    
+    .summary {
+        color: #edeec9;
+        grid-column-start: 2;
+        grid-column-end: 4;
+        text-align: center;
+        font-size: 16px;
+    }
+    
+    .button {
+        background-color: #30332e;
+        color: white;
+        border: 1px solid white;
+        padding: 15px 32px;
+        text-align: center;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+        grid-column-start: 3;
+        margin-top: 50px;
+        width:70vw;
+        height:60px;
+        font-family: 'Lexend Zetta', sans-serif;
+        padding-bottom: 5px;
+        grid-column-start: 2;
+        grid-column-end: 4;
+    }
+
+    .greyBox {
+        height: 260px;
+        background-color: #7A8693;
+        grid-row-start: 2;
+        width: 200px;
+        margin-top: 70px;
+        margin-left: -60px;
+        z-index: 1;
+    }
+    
+    .dish {
+        height: 200px;
+        width: 200px;
+        margin-top: 30px;
+        grid-column-start:5;
+        grid-column-start:6;
+        grid-row-start: 2;
+        margin-left: -250px;
+        z-index: 5;
+    }
+    
+    .chef {
+        height: 150px;
+        width: 230px;
+        margin-top: 170px;
+        margin-left: -290px;
+        grid-column-start: 5;
+        grid-column-start: 6;
+        grid-row-start: 2;
+        z-index: 10;
+    } 
+    
+    .processHeading {
+        font-family: 'Lexend Zetta', sans-serif;
+        padding-bottom: 10px;
+        font-size: 24px;
+        color: #edeec9;
+        border-bottom: 1px solid white;
+    }
+}    
